created route system

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/app.run.js"></script>
+    <script src="js/app.config.js"></script>
   </head>
   <body ng-app="starter">
 
